Testing html - spacing correction and form validation correction

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -276,7 +276,7 @@ footer {
     position: absolute;
     top: 33vh;
     z-index: 999;
-    font-size: 1em;
+    font-size: 1.2em;
     font-family: inherit;
 }
 
